fixed z-index

--- a/css/style.css
+++ b/css/style.css
@@ -204,6 +204,8 @@ ol {
 
     background-color: #ffffff;
     box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.1);
+
+    z-index: 2;
 }
 
 
